# worldgeo

./: .bumpversion.cfg  README.md  build_index.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_index.yaml  build_vatsim.yaml  build_world.yaml
prebuilt/vatsim/: vatsim4.idx
prebuilt/world/: world4.idx  world5.idx
prebuilt/world/sharded/4/: world4_0.idx  world4_4.idx  world4_8.idx  world4_b.idx  world4_d.idx  world4_e.idx  world4_g.idx  world4_h.idx  world4_q.idx  world4_w.idx  world4_z.idx
prebuilt/world/sharded/5/: world5_1.idx  world5_2.idx  world5_7.idx  world5_9.idx  world5_c.idx  world5_d.idx  world5_e.idx  world5_f.idx  world5_j.idx  world5_n.idx  world5_r.idx  world5_s.idx  world5_v.idx  world5_w.idx  world5_x.idx  world5_y.idx  world5_z.idx
prebuilt/world/sharded/6/: world6_1.idx  world6_2.idx  world6_4.idx  world6_5.idx  world6_6.idx  world6_7.idx  world6_8.idx  world6_9.idx  world6_c.idx  world6_f.idx  world6_g.idx  world6_j.idx  world6_k.idx  (+7 more)
world/: world4.idx
world/sharded/4/: world4_1.idx  world4_5.idx  world4_6.idx  world4_7.idx  world4_9.idx  world4_c.idx  world4_f.idx  world4_j.idx  world4_k.idx  world4_m.idx  world4_n.idx  world4_p.idx  world4_r.idx  world4_s.idx  world4_t.idx  world4_u.idx  world4_v.idx  world4_x.idx  world4_y.idx
world/sharded/5/: world5_0.idx  world5_4.idx  world5_5.idx  world5_6.idx  world5_8.idx  world5_b.idx  world5_g.idx  world5_h.idx  world5_k.idx  world5_m.idx  world5_p.idx  world5_q.idx  world5_t.idx  world5_u.idx
world/sharded/6/: world6_0.idx  world6_b.idx  world6_d.idx  world6_e.idx  world6_h.idx  world6_m.idx  world6_n.idx  world6_r.idx  world6_t.idx  world6_u.idx  world6_y.idx
world/sharded/7/: world7_0.idx  world7_2.idx  world7_8.idx  world7_9.idx  world7_b.idx  world7_g.idx  world7_h.idx  world7_j.idx  world7_m.idx  world7_n.idx  world7_x.idx  world7_z.idx
worldgeo/: __init__.py  builder.py  collect.py  countries.py  index.py  misc.py  objects.py  sharded.py
(+4 files in other folders)
